mobile testing, Safari webkit issue (backface-visibility)

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -84,7 +84,7 @@ width: 0px;
   width: 100%;
   height: 100%;
   border-radius: 50px;
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   border: 8px solid #264653;
 }
 
